# door_monitor

./: .dockerignore  .gitignore  Dockerfile  Makefile  Makefile.venv  README.md  config.ini  docker-compose.yml  requirements.txt  run_frontend.sh  secrets.txt  start.sh  update_atlas.sh
doorbell/: .env  .gitignore  Dockerfile  Dockerfile.test  config.ini  prerequirements.txt  pyproject.toml  requirements.dev.txt  requirements.txt  start.sh
doorbell/app/: config.yaml  const.py  containers.py  endpoints.py  kelvin.py  main.py  secrets.yaml
doorbell/app/frontend/app/: __init__.py  config copy.json  config.json  doormonitor.kv  doormonitorapp.py
doorbell/app/frontend/utils/: __init__.py  utils.py
doorbell/app/inspo/: main_old.py  settings.yaml
doorbell/app/models/: __init__.py  memory.py  models.py
doorbell/app/service/: ble.py
doorbell/doorbell/: README.md  main.py  serve.py
doorbell/doorbell/app/: app.py  approot.py  const.py
doorbell/doorbell/app/uix/: keypad.py
doorbell/doorbell/app/views/: home.py
doorbell/doorbell/config/: __init__.py  config.py  mqtt.yaml
doorbell/doorbell/models/: __init__.py  models.py
doorbell/doorbell/mqtt/: client.py  config.py  payloads.py
doorbell/src/doorbell/: app.py  const.py  layout.py  main.py  serve.py  test.py  utils.py
doorbell/src/doorbell/config/: common.py  topics.yaml
doorbell/src/doorbell/models/: models.py
doorbell/src/doorbell/mqtt/: client.py  config.py  mqttconst.py
doorbell/src/doorbell/old/: __init__.py  app.py  approot.py  const.py
doorbell/src/doorbell/pages/: home.py  login.py
doorbell/src/doorbell/uix/: bellcontainer.py  keypad.py
(+62 files in other folders)
