[project]
name = "doorbell"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mvheimburg", email = "heimburg@gmail.com"},
]
dependencies = [
    "PyYAML",
    "paho-mqtt",
    "rpi-backlight",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "flet>=0.22.0",
    "hypercorn>=0.16.0",
    "aiomqtt>=2.1.0",
]
requires-python = ">=3.10.0"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.3.7",
]

[tool.pdm.scripts]
main = "python -m doorbell.main"
serve = "python -m doorbell.serve"
